# mdx_to_api

./: .gitignore  README.md  pyproject.toml
mdx_to_api/: authorization.py  lemma.py  main.py  mdx_server.py  mdx_util.py  run.sh
